Refactoring PropertyDefinition.